<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:backgroundTint="@color/black"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/DeepSkyBlue"
        android:text="@string/ac"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        android:layout_marginBottom="270dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_weight="1" />

    <ImageButton
        android:id="@+id/backspace"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/DeepSkyBlue"        android:src="@drawable/ic_baseline_backspace_24"
        app:layout_constraintBottom_toBottomOf="@+id/clear"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintTop_toTopOf="@+id/clear"
        app:layout_constraintVertical_weight="1"
        android:contentDescription="@string/backspace" />


    <ImageButton
        android:id="@+id/percent"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_percent_sign"
        android:scaleType="fitCenter"
        android:backgroundTint="@color/DeepSkyBlue"        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintStart_toEndOf="@+id/backspace"
        app:layout_constraintTop_toTopOf="@+id/backspace"
        android:contentDescription="@string/percent" />

    <ImageButton
        android:id="@+id/division"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_division_sign"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:scaleType="fitCenter"
        android:backgroundTint="@color/DeepSkyBlue"        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/percent"
        app:layout_constraintTop_toTopOf="@+id/percent"
        app:layout_constraintVertical_weight="1"
        android:contentDescription="@string/division" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/_7"
        android:textSize="20sp"
        android:backgroundTint="@color/DarkTurquoise"
        app:layout_constraintEnd_toEndOf="@+id/clear"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/clear"
        app:layout_constraintTop_toBottomOf="@+id/clear"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/_8"
        android:textSize="20sp"
        android:backgroundTint="@color/DarkTurquoise"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/backspace"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/_9"
        android:textSize="20sp"
        android:backgroundTint="@color/DarkTurquoise"
        app:layout_constraintEnd_toEndOf="@+id/percent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/percent"
        app:layout_constraintVertical_weight="1" />


    <ImageButton
        android:id="@+id/multiplication"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_multiply_sign"
        app:layout_constraintEnd_toEndOf="@+id/division"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_weight="1"
        android:backgroundTint="@color/DeepSkyBlue"        app:layout_constraintTop_toBottomOf="@+id/division"
        app:layout_constraintVertical_weight="1"
        android:contentDescription="@string/multiply" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/_4"
        android:textSize="20sp"
        android:backgroundTint="@color/DarkTurquoise"
        app:layout_constraintEnd_toEndOf="@+id/button_7"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_7"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/_5"
        android:textSize="20sp"
        android:backgroundTint="@color/DarkTurquoise"
        app:layout_constraintEnd_toEndOf="@+id/button_8"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/button_8"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/_6"
        android:textSize="20sp"
        android:backgroundTint="@color/DarkTurquoise"
        app:layout_constraintEnd_toEndOf="@+id/button_9"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/button_9"
        app:layout_constraintVertical_weight="1" />


    <ImageButton
        android:id="@+id/minus"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_minus_sign"
        android:scaleType="fitCenter"
        android:backgroundTint="@color/DeepSkyBlue"        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/multiplication"
        app:layout_constraintTop_toBottomOf="@+id/multiplication"
        app:layout_constraintVertical_weight="1"
        android:contentDescription="@string/minus" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/_1"
        android:textSize="20sp"
        android:backgroundTint="@color/DarkTurquoise"
        app:layout_constraintEnd_toEndOf="@+id/button_4"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_4"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/_2"
        android:textSize="20sp"
        android:backgroundTint="@color/DarkTurquoise"
        app:layout_constraintEnd_toEndOf="@+id/button_5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_5"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/_3"
        android:textSize="20sp"
        android:backgroundTint="@color/DarkTurquoise"
        app:layout_constraintEnd_toEndOf="@+id/button_6"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_6"
        app:layout_constraintVertical_weight="1" />

    <ImageButton
        android:id="@+id/plus"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_plus_sign"
        android:scaleType="fitCenter"
        android:backgroundTint="@color/DeepSkyBlue"        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/minus"
        app:layout_constraintTop_toBottomOf="@+id/minus"
        app:layout_constraintVertical_weight="1"
        android:contentDescription="@string/plus" />

    <Button
        android:id="@+id/point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/DarkTurquoise"
        android:text="@string/point"
        android:textSize="20sp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/button_1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_1"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/DarkTurquoise"
        android:text="@string/_0"
        android:textSize="20sp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/button_2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/button_2"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_weight="1" />

    <ImageButton
        android:id="@+id/equals"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/DodgerBlue"
        android:contentDescription="@string/equal"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_equal_sign"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/plus"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="@+id/button_3"
        app:layout_constraintTop_toBottomOf="@+id/plus"
        app:layout_constraintVertical_bias="0.037"
        app:layout_constraintVertical_weight="1" />
</androidx.constraintlayout.widget.ConstraintLayout>