<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThemeSettingsActivity">

    <ImageView
        android:id="@+id/lightBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/background_light"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="30dp" />

    <ImageView
        android:id="@+id/imageViewNight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="30dp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/themeSwitch"
        android:layout_width="192dp"
        android:layout_height="76dp"
        android:layout_marginTop="40dp"
        android:text="@string/light_theme"
        android:textSize="25sp"
        android:textColor="@color/DeepSkyBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/theme_choose"
        android:textColor="@color/DodgerBlue"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>